--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta content="text/html"; charset="utf-8"/>
 		<title>Rohan Prinja</title>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="js/jquery-1.10.0.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script> -->
@@ -17,44 +17,54 @@
 			$("#resume-content").hide();
 			$("#about-content").hide();
 			$("#home-button").click(function(){
-				$("#main-content").fadeOut(function(){
-					var welcomeText = $("#welcome-content").html();
-					current = "welcome"
-					$("#main-content").html(welcomeText);
-					$("#main-content").fadeIn();
-				});
+				if (current != "welcome") {
+					$("#main-content").fadeOut(function(){
+						var welcomeText = $("#welcome-content").html();
+						current = "welcome"
+						$("#main-content").html(welcomeText);
+						$("#main-content").fadeIn();
+					});
+				}
 			});
 			$("#about-button").click(function(){
-				$("#main-content").fadeOut(function(){
-					var aboutText = $("#about-content").html();
-					current = "about"
-					$("#main-content").html(aboutText);
-					$("#main-content").fadeIn();
-				});
+				if (current != "about") {
+					$("#main-content").fadeOut(function(){
+						var aboutText = $("#about-content").html();
+						current = "about"
+						$("#main-content").html(aboutText);
+						$("#main-content").fadeIn();
+					});
+				}
 			});
 			$("#projects-button").click(function(){
-				$("#main-content").fadeOut(function(){
-					var projectsText = $("#projects-content").html();
-					current = "projects"
-					$("#main-content").html(projectsText);
-					$("#main-content").fadeIn();
-				});
+				if (current != "projects") {
+					$("#main-content").fadeOut(function(){
+						var projectsText = $("#projects-content").html();
+						current = "projects"
+						$("#main-content").html(projectsText);
+						$("#main-content").fadeIn();
+					});
+				}
 			});
 			$("#contact-button").click(function(){
-				$("#main-content").fadeOut(function(){
-					var contactText = $("#contact-content").html();
-					current = "contact"
-					$("#main-content").html(contactText);
-					$("#main-content").fadeIn();
-				});
+				if (current != "contact") {
+					$("#main-content").fadeOut(function(){
+						var contactText = $("#contact-content").html();
+						current = "contact"
+						$("#main-content").html(contactText);
+						$("#main-content").fadeIn();
+					});
+				}
 			});
 			$("#resume-button").click(function(){
-				$("#main-content").fadeOut(function(){
-					var resumeText = $("#resume-content").html();
-					current = "resume"
-					$("#main-content").html(resumeText);
-					$("#main-content").fadeIn();
-				});
+				if (current != "resume") {
+					$("#main-content").fadeOut(function(){
+						var resumeText = $("#resume-content").html();
+						current = "resume"
+						$("#main-content").html(resumeText);
+						$("#main-content").fadeIn();
+					});
+				}
 			});
 		});
 		</script>
