--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
 				<h2>Music</h2>
         		<p>I love listening to music, mostly math/noise rock like Don Caballero, Dianogah and Polvo. I also like 65daysofstatic, Mogwai and Pele. <a href="http://www.last.fm/user/wenderen">This</a> is my last.fm account. Add me as a friend and let's talk music!</p>
         		<h2>Coding</h2>
-        		<p>I like to code, and I especially enjoy dabbling in programming languages. I mostly code in Ruby and Python. I also know C/C++, Java, Scheme and VHDL. Currently I'm teaching myself <a href="http://www.jsoftware.com/‎
-">J</a>, a fascinating little language that uses a very different paradigm (tacit programming) from most other languages.</p>
+        		<p>I like to code, and I especially enjoy dabbling in programming languages. I mostly code in Ruby and Python. I also know C/C++, Java, Scheme and VHDL. Currently I'm teaching myself <a href="http://www.jsoftware.com">J</a>, a fascinating little language that uses a very different paradigm (tacit programming) from most other languages.</p>
         		<h2>Language Learning</h2>
         		<p>I took French as a second language in school, and learnt it for about seven years (kind of rusty now though!). I took a year of Chinese in my freshman year and a year of German in my sophomore year at IIT Bombay. I'm hoping to take the advanced German course next year!</p>
 				
