Fixed link to resume

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 			<div id="resume-content" class="content">
 				<h1 class="header1">Resume</h1>
 				<p>Note to self: fill this in!</p>
-				<p>Click <a href="#">here</a> to download my resume as a PDF file.</p>
+				<p>Click <a href="resume.pdf">here</a> to download my resume as a PDF file.</p>
 				<table class="table table-condensed table-striped">
 					<caption>SPIs in each semester</caption>
 					<thead>
